--- a/admin/package.json
+++ b/admin/package.json
@@ -5,19 +5,25 @@
   "dependencies": {
     "@fortawesome/react-fontawesome": "0.0.17",
     "body-parser": "^1.18.2",
-    "express": "^4.16.2",
+    "express": "^4.16.3",
     "font-awesome": "^4.7.0",
+    "globalize": "0.1.1",
     "material-ui": "^0.20.0",
-    "mongodb": "^3.0.2",
-    "mongoose": "^5.0.5",
+    "mongodb": "^3.0.4",
+    "mongoose": "^5.0.10",
     "rc-progress": "^2.2.5",
     "react": "^16.2.0",
+    "react-big-calendar": "^0.18.0",
+    "react-bootstrap-table": "^4.3.1",
+    "react-dnd": "^2.5.4",
+    "react-dnd-html5-backend": "^2.5.4",
     "react-dom": "^16.2.0",
     "react-fontawesome": "^1.6.1",
     "react-highcharts": "^16.0.2",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.0"
+    "react-scripts": "1.1.0",
+    "react-sortablejs": "^1.3.6"
   },
   "scripts": {
     "start": "react-scripts start",
