--- a/admin/package.json
+++ b/admin/package.json
@@ -6,8 +6,10 @@
     "@fortawesome/react-fontawesome": "0.0.17",
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
+    "faker": "^4.1.0",
     "font-awesome": "^4.7.0",
     "globalize": "0.1.1",
+    "immutable": "^3.8.2",
     "material-ui": "^0.20.0",
     "mongodb": "^3.0.4",
     "mongoose": "^5.0.10",
@@ -20,10 +22,13 @@
     "react-dom": "^16.2.0",
     "react-fontawesome": "^1.6.1",
     "react-highcharts": "^16.0.2",
+    "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0",
-    "react-sortablejs": "^1.3.6"
+    "react-sortablejs": "^1.3.6",
+    "react-trello": "^1.27.5",
+    "redux": "^3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
